--- a/acount/src/main/res/layout/activity_swipe_back.xml
+++ b/acount/src/main/res/layout/activity_swipe_back.xml
@@ -5,6 +5,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:text="测试侧滑返回"/>
+    <com.syc.framework.imageloader.DraweeView
+        android:background="#434"
+        android:id="@+id/image"
+        android:scaleType="fitXY"
+        android:layout_centerInParent="true"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        />
 </RelativeLayout>
