--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle">@style/activity_animation</item>
+    </style>
+
+    <!-- 默认Activity跳转动画 -->
+    <style name="activity_animation" mce_bogus="1" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/create_zoomin</item>
+        <item name="android:activityOpenExitAnimation">@anim/create_zoomout</item>
+        <item name="android:activityCloseEnterAnimation">@anim/finish_zoomin</item>
+        <item name="android:activityCloseExitAnimation">@anim/finish_zoomout</item>
     </style>
 
 </resources>
