新增下拉刷新控件

--- a/acount/src/main/res/layout/activity_accounts.xml
+++ b/acount/src/main/res/layout/activity_accounts.xml
@@ -15,10 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_accounts"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+      <com.syc.common.widget.refresh.PullToRefreshRecycleView
+          android:id="@+id/prt_accounts"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingActionButton2"
