--- a/entry/src/main/res/layout/activity_main.xml
+++ b/entry/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:layout_weight="1" />
 
         <com.syc.common.widget.BottomTabLayout
+            android:id="@+id/bottom_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
