--- a/acount/src/main/res/layout/fragment_main_mine.xml
+++ b/acount/src/main/res/layout/fragment_main_mine.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
+            android:id="@+id/tv_name"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
