--- a/business/src/main/res/layout/fragment_main_business.xml
+++ b/business/src/main/res/layout/fragment_main_business.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <com.syc.common.widget.CommonTitleBar
+            android:layout_width="match_parent"
+            app:titleText="推荐"
+            android:layout_height="wrap_content"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -11,5 +19,5 @@
             android:layout_centerInParent="true"
             android:text="Business" />
     </RelativeLayout>
-
+    </LinearLayout>
 </layout>
