--- a/entry/src/main/res/layout/layout_tab_recommend.xml
+++ b/entry/src/main/res/layout/layout_tab_recommend.xml
@@ -17,5 +17,5 @@
         android:layout_gravity="center"
         android:enabled="false"
         android:textColor="@drawable/bottom_tab_text_selector"
-        android:text="我的" />
+        android:text="推荐" />
 </LinearLayout>
