--- a/acount/src/main/res/layout/activity_login.xml
+++ b/acount/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         <com.syc.common.widget.CommonTitleBar
             android:layout_width="match_parent"
             app:titleText="登录"
+            app:backClick="@{()->vm.onBackClick()}"
             android:layout_height="wrap_content"/>
     <RelativeLayout
         android:layout_width="match_parent"
