--- a/acount/src/main/res/layout/fragment_main_homepage.xml
+++ b/acount/src/main/res/layout/fragment_main_homepage.xml
@@ -10,6 +10,7 @@
         <com.syc.common.widget.CommonTitleBar
             android:layout_width="match_parent"
             app:titleText="首页"
+            app:leftVisible = "false"
             android:layout_height="wrap_content" />
 
         <RelativeLayout
