--- a/acount/src/main/res/layout/fragment_main_mine.xml
+++ b/acount/src/main/res/layout/fragment_main_mine.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="vm"
+            type="com.syc.acount.viewmodel.MainMineViewModel"/>
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +22,12 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:onClick="@{()->vm.login()}"
+                android:text="登录"/>
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
