--- a/acount/src/main/res/layout/fragment_main_mine.xml
+++ b/acount/src/main/res/layout/fragment_main_mine.xml
@@ -12,11 +12,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.syc.common.widget.CommonTitleBar
-            android:layout_width="match_parent"
-            app:titleText="我的"
-            app:leftVisible = "false"
-            android:layout_height="wrap_content" />
+        <!--<com.syc.common.widget.CommonTitleBar-->
+            <!--android:layout_width="match_parent"-->
+            <!--app:titleText="我的"-->
+            <!--app:leftVisible = "false"-->
+            <!--android:layout_height="wrap_content" />-->
 
         <RelativeLayout
             android:layout_width="match_parent"
