--- a/business/src/main/res/layout/fragment_main_business.xml
+++ b/business/src/main/res/layout/fragment_main_business.xml
@@ -5,11 +5,11 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <com.syc.common.widget.CommonTitleBar
-            android:layout_width="match_parent"
-            app:titleText="推荐"
-            app:leftVisible = "false"
-            android:layout_height="wrap_content"/>
+        <!--<com.syc.common.widget.CommonTitleBar-->
+            <!--android:layout_width="match_parent"-->
+            <!--app:titleText="推荐"-->
+            <!--app:leftVisible = "false"-->
+            <!--android:layout_height="wrap_content"/>-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
