--- a/business/src/main/res/layout/fragment_main_business.xml
+++ b/business/src/main/res/layout/fragment_main_business.xml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <!--<com.syc.common.widget.CommonTitleBar-->
-            <!--android:layout_width="match_parent"-->
-            <!--app:titleText="推荐"-->
-            <!--app:leftVisible = "false"-->
-            <!--android:layout_height="wrap_content"/>-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <!--android:layout_width="match_parent"-->
+        <!--app:titleText="推荐"-->
+        <!--app:leftVisible = "false"-->
+        <!--android:layout_height="wrap_content"/>-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Business" />
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Business" />
+
+            <com.syc.common.widget.StateView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:state="normal"
+                app:loadingImageSrc="@drawable/back"
+                app:contextText="@string/app_name"/>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
