--- a/business/src/main/res/layout/fragment_main_business.xml
+++ b/business/src/main/res/layout/fragment_main_business.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <data>
+        <variable
+            name="vm"
+            type="com.example.business.viewmodel.MainBusinessViewModel"/>
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,6 +30,7 @@
                 android:layout_height="match_parent"
                 app:state="normal"
                 app:loadingImageSrc="@drawable/back"
+                retryClick="@{()->vm.onRetryClick()}"
                 app:contextText="@string/app_name"/>
         </RelativeLayout>
     </LinearLayout>
