--- a/common/src/main/res/layout/layout_state_view.xml
+++ b/common/src/main/res/layout/layout_state_view.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_above="@+id/tv_content"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:id="@+id/iv_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
