--- a/acount/src/main/res/layout/item_accounts.xml
+++ b/acount/src/main/res/layout/item_accounts.xml
@@ -13,8 +13,7 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{vm.name}"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 
