--- a/acount/src/main/res/layout/activity_swipe_back.xml
+++ b/acount/src/main/res/layout/activity_swipe_back.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="测试侧滑返回"/>
-    <com.syc.common.imageloader.DraweeView
+    <com.syc.common.imageloader.fressco.DraweeView
         android:background="#434"
         android:id="@+id/image"
         android:scaleType="fitXY"
