--- a/acount/src/main/res/layout/fragment_main_mine.xml
+++ b/acount/src/main/res/layout/fragment_main_mine.xml
@@ -23,17 +23,37 @@
             android:layout_height="0dp"
             android:layout_weight="1">
             <Button
+                android:id="@+id/btn_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:onClick="@{()->vm.login()}"
                 android:text="登录"/>
+
+            <Button
+                android:layout_below="@+id/btn_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:onClick="@{()->vm.download()}"
+                android:text="下载"/>
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="mine" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:max="100"
+                android:progress="@{vm.progress}"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="163dp" />
         </RelativeLayout>
     </LinearLayout>
 
