--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,18 @@
         <item name="android:windowAnimationStyle">@style/activity_animation</item>
     </style>
 
+    <style name="LoginActivityTheme" parent="AppTheme">
+        <item name="android:windowAnimationStyle">@style/activity_login_anim</item>
+    </style>
+
+    <!-- 登录Activity跳转动画 -->
+    <style name="activity_login_anim" mce_bogus="1" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/enter_from_bottom</item>
+        <item name="android:activityOpenExitAnimation">@anim/create_zoomout</item>
+        <item name="android:activityCloseEnterAnimation">@anim/finish_zoomin</item>
+        <item name="android:activityCloseExitAnimation">@anim/exit_from_bottom</item>
+    </style>
+
     <!-- 默认Activity跳转动画 -->
     <style name="activity_animation" mce_bogus="1" parent="@android:style/Animation.Activity">
         <item name="android:activityOpenEnterAnimation">@anim/create_zoomin</item>
