--- a/acount/src/main/res/layout/fragment_main_mine.xml
+++ b/acount/src/main/res/layout/fragment_main_mine.xml
@@ -69,6 +69,7 @@
                 android:scaleType="centerCrop"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/progressBar"
+                android:transitionName="image"
                 android:layout_width="200dp"
                 android:layout_height="200dp" />
         </RelativeLayout>
